[package]
name = "breaker"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git" } # Use unstable for Bevy 0.13 support
bevy_editor_pls = "0.8.1"
bevy_rapier2d = "0.26.0"
leafwing-input-manager = "0.13.3"

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" } # Patch unstable for Bevy 0.13 support

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
